Changes in @NEW@:
 o Bugfixes:
    * cvc merge on a non-shadow no longer returns a traceback (bz# 792),
      and cvc context foo does not return a traceback when context foo does
      not exist (bz #757)  Fixed by David Coulthart.
    * opening invalid changesets now gives a good error message instead of
      a traceback
    * removed obsolete changemail script

Changes in 1.0.5:
 o Performance improvements:
    * The use of copy.deepcopy() has been eliminated from the
      dependency code.  The new routines are up to 80% faster for
      operations like DependencySet.copy().
    * Removing files looks directly into the file stream of the file
      being removed when cleaning up config file contents rather than
      thawing the full file stream.
    * Getting a single trove from the database without files returned file
      information anyway
    * Trove.applyChangeSet() optionally skips merging file information
    * Cache troves on the update/erase path to avoid duplicate fetchs from
      the local database

 o Bugfixes
    * Installing from a changeset needlessly relied on troves from the 
      database having file information while processing redirects
    * Extraneous dependency cache checks have been removed from the
      addDep() path.
    * When removing files, conary now looks up the file flags directly
      in the file stream in order to clean up config file contents.
      Previously the entire file stream was thawed, which is much more
      resource intensive.

 o Build fixes:
    * r.addArchive() now supports rpms with bzip2-compressed payloads.

Changes in 1.0.4:
 o Performance improvements:
    * The speed of erasing troves with many dependencies has been
      significantly improved.
    * The join order of tables is forced through the use of
      STRAIGHT_JOIN in TroveStore.iterTroves() to work around some
      MySQL optimizer shortcomings.
    * An --analyze command line option has been added to the